# capability-behaviour-rs

./: .gitmodules  Cargo.toml  build.rs  compile.sh
.cargo/: config.toml
docker/: name.sh  run_compiler_container.sh
generate/: Cargo.toml
generate/src/: lib.rs
src/: compartments.rs  lib.rs  main.rs
src/c/: lib.c
