[package]
name = "capability-behaviour-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cheribsd-capability-rs = { path = "./cheribsd-capability-rs" }
morello = { path = "./cheribsd-capability-rs/morello-capability-rs" }
