[package]
name = "capability-behaviour-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cheribsd-capability-rs = { path = "./cheribsd-capability-rs" }
capability-generate = { path = "./generate" }
morello = { path = "./cheribsd-capability-rs/morello-capability-rs" }
libc = "0.2.93"
lazy_static = "0.1.5"

[build-dependencies]
cc = "1.0"